@startuml

package "org-camal" {

    class Empresas {
        -idEmpresa
        -empresaCodigo
        -razonSocial
        -ruc
        -direccion
        -departamento
        -distrito
        -provincia
        -ubigeo
        -telefono
        -celular
        -correo
        -paginaWeb
        -estado
        --metodos--
    }

    class Documentos {
        -idDocumentos
        -codigo
        -descripcion
        --metodos--
    }
    class  Entidades {
        -idEntidad
        -idEmpresa
        -idZona
        -nombre
        -idDocumentos
        -numeroDocumento
        -direccion
        -telefono
        -celular
        -email
        -activo
        -apellidoPaterno
        -apellidoMaterno
        -sexo
        -sueldo
        --metodos--
    }
    class EntidadesTipos {
        -idEmpresas
        -codigo
        -descripcion
        --metodos--
    }
    class EntidadesXEntidadesTipos {
        -idEntidadesXEntidadesTipos
        -idEntidad
        -codigoEntidadesTipos
        --metodos--
    }

    interface EmpresaMetodos {
        - BuscarXId()
        - guardar(Empresa)
        - listar()
    }
    interface EntidadesMetodos {
            - BuscarXNombre()
            - BuscarXId()
            - buscarPorDocummento()
            - guardar(Entidad)
            - listar()
    }


    Empresas "1" --* "n*" Entidades : composicion
    Empresas "1" --* "n*" EntidadesTipos : composicion
    Empresas "1" --* "n*" Documentos : composicion
    Entidades "1" --* "n*" EntidadesXEntidadesTipos : compocision
    EntidadesXEntidadesTipos "n*" *-- "1" EntidadesTipos
    Documentos "1" --* "n*" Entidades: composicion

    Entidades --> EntidadesMetodos: implementa

    Empresas --> EmpresaMetodos: implementa


@enduml